--- a/about.html
+++ b/about.html
@@ -59,8 +59,8 @@
 
       <div class="bg-faded p-4 my-4">
         <hr class="divider">
-        <h2 class="text-center text-lg text-uppercase my-0">About
-          <strong>Business Casual</strong>
+        <h2 class="text-center text-lg text-uppercase my-0">Put in
+          <strong>a good word!</strong>
         </h2>
         <hr class="divider">
         <div class="row">
@@ -68,45 +68,47 @@
             <img class="img-fluid mb-4 mb-lg-0" src="img/slide-2.jpg" alt="">
           </div>
           <div class="col-lg-6">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam soluta dolore voluptatem, deleniti dignissimos excepturi veritatis cum hic sunt perferendis ipsum perspiciatis nam officiis sequi atque enim ut! Velit, consectetur.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam pariatur perspiciatis reprehenderit illo et vitae iste provident debitis quos corporis saepe deserunt ad, officia, minima natus molestias assumenda nisi velit?</p>
+            <p>Let us know what your favourity study space has been and who you would recommend it for by filling in the form below so we can add preferences to our website!</p>
+            <p>Thank you for your feedback and get working!</p>
+            <p>Lots of love, </p>
+            <p>the study buddy team xoxo </p>
           </div>
         </div>
       </div>
 
       <div class="bg-faded p-4 my-4">
         <hr class="divider">
-        <h2 class="text-center text-lg text-uppercase my-0">Our
-          <strong>Team</strong>
+        <h2 class="text-center text-lg text-uppercase my-0">Featured
+          <strong>Spaces</strong>
         </h2>
         <hr class="divider">
         <div class="row">
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="https://www.google.co.uk/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwjL-4SYgefXAhWDDsAKHZ4bAyMQjRwIBw&url=http%3A%2F%2Fwww.carterclack.co.uk%2Fproject%2Fucl-print-room-cafe%2F&psig=AOvVaw10LS-M8N_44Z4cEgSQVDMD&ust=1512155723200654" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">Print Room Cafe
+                  <small class="text-muted">UCL</small>
                 </h4>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="https://www.google.co.uk/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwijuq6NgefXAhWsDcAKHdk_AHwQjRwIBw&url=https%3A%2F%2Fthetab.com%2Fguides%2Fguide%2Fucl%2F&psig=AOvVaw39WO9r7o4DvA18u14f5Y_9&ust=1512155689557939" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">Science Library
+                  <small class="text-muted">UCL</small>
                 </h4>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="card h-100">
-              <img class="card-img-top" src="http://placehold.it/750x450" alt="">
+              <img class="card-img-top" src="img/print-cafe.jpg" alt="">
               <div class="card-body text-center">
-                <h4 class="card-title m-0">John Smith
-                  <small class="text-muted">Job Title</small>
+                <h4 class="card-title m-0">Waterstones
+                  <small class="text-muted">Gower Street</small>
                 </h4>
               </div>
             </div>
@@ -116,7 +118,7 @@
 
     </div>
     <!-- /.container -->
-    
+
       <div class="bg-faded p-4 my-4">
         <hr class="divider">
         <h2 class="text-center text-lg text-uppercase my-0">Contact
