added pictures for the three featured places
added images, they are in the img folder

--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
         <div class="row">
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="https://www.google.co.uk/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwjL-4SYgefXAhWDDsAKHZ4bAyMQjRwIBw&url=http%3A%2F%2Fwww.carterclack.co.uk%2Fproject%2Fucl-print-room-cafe%2F&psig=AOvVaw10LS-M8N_44Z4cEgSQVDMD&ust=1512155723200654" alt="">
+              <img class="card-img-top" src="img/print-room-cafe.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">Print Room Cafe
                   <small class="text-muted">UCL</small>
@@ -95,7 +95,7 @@
           </div>
           <div class="col-md-4 mb-4 mb-md-0">
             <div class="card h-100">
-              <img class="card-img-top" src="https://www.google.co.uk/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwijuq6NgefXAhWsDcAKHdk_AHwQjRwIBw&url=https%3A%2F%2Fthetab.com%2Fguides%2Fguide%2Fucl%2F&psig=AOvVaw39WO9r7o4DvA18u14f5Y_9&ust=1512155689557939" alt="">
+              <img class="card-img-top" src="img/science-library.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">Science Library
                   <small class="text-muted">UCL</small>
@@ -105,7 +105,7 @@
           </div>
           <div class="col-md-4">
             <div class="card h-100">
-              <img class="card-img-top" src="img/print-cafe.jpg" alt="">
+              <img class="card-img-top" src="img/waterstones.jpg" alt="">
               <div class="card-body text-center">
                 <h4 class="card-title m-0">Waterstones
                   <small class="text-muted">Gower Street</small>
