--- a/index.html
+++ b/index.html
@@ -69,22 +69,22 @@
             <div class="carousel-item active">
               <img class="d-block img-fluid w-100" src="img/slide-1.jpg" alt="">
               <div class="carousel-caption d-none d-md-block">
-                <h3 class="text-shadow">First Slide</h3>
-                <p class="text-shadow">This is the caption for the first slide.</p>
+                <h3 class="text-shadow">Busy cafes</h3>
+                <p class="text-shadow">If you enjoy the company of strangers</p>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block img-fluid w-100" src="img/slide-2.jpg" alt="">
               <div class="carousel-caption d-none d-md-block">
-                <h3 class="text-shadow">Second Slide</h3>
-                <p class="text-shadow">This is the caption for the second slide.</p>
+                <h3 class="text-shadow">Quiet spaces</h3>
+                <p class="text-shadow">For ultimate focus ability</p>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block img-fluid w-100" src="img/slide-3.jpg" alt="">
               <div class="carousel-caption d-none d-md-block">
-                <h3 class="text-shadow">Third Slide</h3>
-                <p class="text-shadow">This is the caption for the third slide.</p>
+                <h3 class="text-shadow">Group work appropriate</h3>
+                <p class="text-shadow">If there is something that just needs to be done as a group</p>
               </div>
             </div>
           </div>
@@ -100,9 +100,9 @@
         <!-- Welcome Message -->
         <div class="text-center mt-4">
           <div class="text-heading text-muted text-lg">Welcome To</div>
-          <h1 class="my-2">Business Casual</h1>
+          <h1 class="my-2">Study buddy</h1>
           <div class="text-heading text-muted text-lg">By
-            <strong>Start Bootstrap</strong>
+            <strong>Desperate UCL students</strong>
           </div>
         </div>
       </div>
