--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
 
       <div class="bg-faded p-4 my-4">
         <hr class="divider">
-        <h2 class="text-center text-lg text-uppercase my-0">Build a website
-          <strong>worth visitng</strong>
+        <h2 class="text-center text-lg text-uppercase my-0">Find a place
+          <strong>where you'll be proud to be working</strong>
         </h2>
         <hr class="divider">
         <img class="img-fluid float-left mr-4 d-none d-lg-block" src="img/intro-pic.jpg" alt="">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam soluta dolore voluptatem, deleniti dignissimos excepturi veritatis cum hic sunt perferendis ipsum perspiciatis nam officiis sequi atque enim ut! Velit, consectetur.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam pariatur perspiciatis reprehenderit illo et vitae iste provident debitis quos corporis saepe deserunt ad, officia, minima natus molestias assumenda nisi velit?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit totam libero expedita magni est delectus pariatur aut, aperiam eveniet velit cum possimus, autem voluptas. Eum qui ut quasi voluptate blanditiis?</p>
+        <p>Because of busy libraries and overcrowding in general, students have been forced to find alternative spaces to be productive in.</p>
+        <p>Study buddy helps you do just that. Not only you can find places to work in this space, but also can FIND YOUR FIT and adapt your search to your needs in a specific moment</p>
+        <p>Be free to let us know about more places we might not be aware of in the VOTE tab, or leave comments about the spaces featured so we can update our info!</p>
       </div>
 
       <div class="bg-faded p-4 my-4">
