just made it look prettier
changed a capital letter cause it didnt look right

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <!-- Welcome Message -->
         <div class="text-center mt-4">
           <div class="text-heading text-muted text-lg">Welcome To</div>
-          <h1 class="my-2">Study buddy</h1>
+          <h1 class="my-2">Study Buddy</h1>
           <div class="text-heading text-muted text-lg">By
             <strong>Desperate UCL students</strong>
           </div>
