--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <hr class="divider">
         <img class="img-fluid float-left mr-4 d-none d-lg-block" src="img/intro-pic.jpg" alt="">
         <p>Because of busy libraries and overcrowding in general, students have been forced to find alternative spaces to be productive in.</p>
-        <p>Study buddy helps you do just that. Not only you can find places to work in this space, but also can FIND YOUR FIT and adapt your search to your needs in a specific moment</p>
+        <p>Study buddy helps you do just that. Not only you can find places to work in this space, but also can FIND YOUR FIT and adapt your search to your needs in a specific moment. Scroll down to do that! :)</p>
         <p>Be free to let us know about more places we might not be aware of in the VOTE tab, or leave comments about the spaces featured so we can update our info!</p>
       </div>
 
