--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img class="d-block img-fluid w-100" src="img/slide-1.jpg" alt="">
+              <img class="d-block img-fluid w-100" src="img/busy-print.jpg" alt="">
               <div class="carousel-caption d-none d-md-block">
                 <h3 class="text-shadow">Busy cafes</h3>
                 <p class="text-shadow">If you enjoy the company of strangers</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block img-fluid w-100" src="img/slide-2.jpg" alt="">
+              <img class="d-block img-fluid w-100" src="img/main-library.jpg" alt="">
               <div class="carousel-caption d-none d-md-block">
                 <h3 class="text-shadow">Quiet spaces</h3>
                 <p class="text-shadow">For ultimate focus ability</p>
