--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Business Casual - Start Bootstrap Theme</title>
+    <title> STUDY BUDDY LOCATOR </title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -35,8 +35,8 @@
 
   <body>
 
-    <div class="tagline-upper text-center text-heading text-shadow text-white mt-5 d-none d-lg-block">Business Casual</div>
-    <div class="tagline-lower text-center text-expanded text-shadow text-uppercase text-white mb-5 d-none d-lg-block">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="tagline-upper text-center text-heading text-shadow text-white mt-5 d-none d-lg-block">STUDY BUDDY</div>
+    <div class="tagline-lower text-center text-expanded text-shadow text-uppercase text-white mb-5 d-none d-lg-block"> Locate your study buddy! </div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-faded py-lg-4">
@@ -70,8 +70,8 @@
 
       <div class="bg-faded p-4 my-4">
         <hr class="divider">
-        <h2 class="text-center text-lg text-uppercase my-0">Contact
-          <strong>Business Casual</strong>
+        <h2 class="text-center text-lg text-uppercase my-0">
+          <strong> find your space! </strong>
         </h2>
         <hr class="divider">
         <div class="row">
@@ -95,18 +95,9 @@
     </script>
           </div>
           <div class="col-lg-4">
-            <h5 class="mb-0">Find Your Space!</h5>
-            <div class="mb-4">123.456.7890</div>
-            <h5 class="mb-0">Email:</h5>
-            <div class="mb-4">
-              <a href="mailto:name@example.com">name@example.com</a>
-            </div>
-            <h5 class="mb-0">Address:</h5>
-            <div class="mb-4">
-              3481 Melrose Place
-              <br>
-              Beverly Hills, CA 90210
-            </div>
+            <h3></h3>
+            <input type="Postcode" placeholder="Postcode"> 
+            <button type="submit" class="btn btn-secondary">Submit</button>
           </div>
         </div>
       </div>
