changed study buddy title and added some blog articles

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
   <body>
 
-    <div class="tagline-upper text-center text-heading text-shadow text-white mt-5 d-none d-lg-block">study buddy</div>
+    <div class="tagline-upper text-center text-heading text-shadow text-white mt-5 d-none d-lg-block">STUDY BUDDY</div>
     <div class="tagline-lower text-center text-expanded text-shadow text-uppercase text-white mb-5 d-none d-lg-block">your source of study space inspiration</div>
 
     <!-- Navigation -->
@@ -68,10 +68,10 @@
             <img class="img-fluid mb-4 mb-lg-0" src="img/slide-2.jpg" alt="">
           </div>
           <div class="col-lg-6">
-            <p>Let us know what your favourity study space has been and who you would recommend it for by filling in the form below so we can add preferences to our website!</p>
+            <p>Let us know what your favourite study space has been and who you would recommend it for by filling in the form below so we can add preferences to our website!</p>
             <p>Thank you for your feedback and get working!</p>
             <p>Lots of love, </p>
-            <p>the study buddy team xoxo </p>
+            <p>The Study Buddy team xoxo </p>
           </div>
         </div>
       </div>
