--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>STUDY BUDY - find your ideal space</title>
+    <title>STUDY BUDDY - find your ideal space</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
 
   <body>
 
-    <div class="tagline-upper text-center text-heading text-shadow text-white mt-5 d-none d-lg-block">study buddy</div>
+    <div class="tagline-upper text-center text-heading text-shadow text-white mt-5 d-none d-lg-block">STUDY BUDDY</div>
     <div class="tagline-lower text-center text-expanded text-shadow text-uppercase text-white mb-5 d-none d-lg-block">your source of study space inspiration</div>
 
     <!-- Navigation -->
@@ -61,10 +61,10 @@
         <div class="card card-inverse">
           <img class="card-img img-fluid w-100" src="img/slide-1.jpg" alt="">
           <div class="card-img-overlay bg-overlay">
-            <h2 class="card-title text-shadow text-white text-uppercase mb-0">Post Title</h2>
-            <h4 class="text-shadow text-white">March 1, 2017</h4>
-            <p class="lead card-text text-shadow text-white w-50 d-none d-lg-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit repellat provident quo aliquam eius ea, animi porro magnam totam dolor nam error quas labore eveniet dicta nostrum inventore veniam. Ipsam?</p>
-            <a href="#" class="btn btn-secondary">Read More</a>
+            <h2 class="card-title text-shadow text-white text-uppercase mb-0"> Legally Desperate</h2>
+            <h4 class="text-shadow text-white"> December 4, 2017</h4>
+            <p class="lead card-text text-shadow text-white w-50 d-none d-lg-block"> Hey buddies, visited the Law Library at UCL the other day and couldn't find a single space to sit in. Looking for a quiet place, with lots of breathing space (I like big rooms) and natural light. Let me know if you find anything similar!</p>
+            <a href="#" class="btn btn-secondary"> Read More </a>
           </div>
         </div>
       </div>
@@ -73,9 +73,23 @@
         <div class="card card-inverse">
           <img class="card-img img-fluid w-100" src="img/slide-2.jpg" alt="">
           <div class="card-img-overlay bg-overlay">
-            <h2 class="card-title text-shadow text-white text-uppercase mb-0">Post Title</h2>
-            <h4 class="text-shadow text-white">March 1, 2017</h4>
-            <p class="lead card-text text-shadow text-white w-50 d-none d-lg-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit repellat provident quo aliquam eius ea, animi porro magnam totam dolor nam error quas labore eveniet dicta nostrum inventore veniam. Ipsam?</p>
+            <h2 class="card-title text-shadow text-white text-uppercase mb-0">Tippy Tap</h2>
+            <h4 class="text-shadow text-white"> 20 November, 2017</h4>
+            <p class="lead card-text text-shadow text-white w-50 d-none d-lg-block">Hey Guys! New space found! It's called Tap Coffee. How do you find it? Just follow the numbers on the door. Literally. Each coffeeshop has a different number, to signify the number of the store #genius. Some are bigger than others and therefore more spacious, some smaller but cozier.
+            
+            What's good? 
+<!-- /.PUT A LIST -->
+                  Good coffee
+                  Pretty space
+
+           The minus? 
+
+                  No plugs. 
+
+Overall rating?
+<!-- /.PUT EMOJI -->
+
+            </p>
             <a href="#" class="btn btn-secondary">Read More</a>
           </div>
         </div>
