--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
               <a class="nav-link text-uppercase text-expanded" href="index.html">Find your fit
                 <span class="sr-only">(current)</span>
               </a>
+              <li class="nav-item px-lg-4">
+              <a class="nav-link text-uppercase text-expanded" href="contact.html">Location</a>
+            </li>
             </li>
             <li class="nav-item px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="about.html">Vote</a>
@@ -47,9 +50,7 @@
             <li class="nav-item px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="blog.html">Social</a>
             </li>
-            <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="contact.html">Location</a>
-            </li>
+            
           </ul>
         </div>
       </div>
@@ -110,13 +111,13 @@
       <div class="bg-faded p-4 my-4">
         <hr class="divider">
         <h2 class="text-center text-lg text-uppercase my-0">Find a place
-          <strong>where you'll be proud to be working</strong>
+          <strong>that motivates you!</strong>
         </h2>
         <hr class="divider">
         <img class="img-fluid float-left mr-4 d-none d-lg-block" src="img/intro-pic.jpg" alt="">
         <p>Because of busy libraries and overcrowding in general, students have been forced to find alternative spaces to be productive in.</p>
-        <p>Study buddy helps you do just that. Not only you can find places to work in this space, but also can FIND YOUR FIT and adapt your search to your needs in a specific moment. Scroll down to do that! :)</p>
-        <p>Be free to let us know about more places we might not be aware of in the VOTE tab, or leave comments about the spaces featured so we can update our info!</p>
+        <p>Study buddy helps you do just that. Not only can you find places to work in this space, but you can also FIND YOUR FIT and adapt your search to your needs in a specific moment. Scroll down to do that! :)</p>
+        <p>Feel free to let us know about more places we might not be aware of in the VOTE tab, or leave comments about the spaces featured so we can update our info!</p>
       </div>
 
       <div class="bg-faded p-4 my-4">
