--- a/blog.html
+++ b/blog.html
@@ -74,7 +74,7 @@
           <img class="card-img img-fluid w-100" src="img/slide-2.jpg" alt="">
           <div class="card-img-overlay bg-overlay">
             <h2 class="card-title text-shadow text-white text-uppercase mb-0">Tippy Tap</h2>
-            <h4 class="text-shadow text-white"> 20 November, 2017</h4>
+            <h4 class="text-shadow text-white"> 1 December, 2017</h4>
             <p class="lead card-text text-shadow text-white w-50 d-none d-lg-block">Hey Guys! New space found! It's called Tap Coffee. How do you find it? Just follow the numbers on the door. Literally. Each coffeeshop has a different number, to signify the number of the store #genius. Some are bigger than others and therefore more spacious, some smaller but cozier.
             
             What's good? 
@@ -99,9 +99,9 @@ Overall rating?
         <div class="card card-inverse">
           <img class="card-img img-fluid w-100" src="img/slide-3.jpg" alt="">
           <div class="card-img-overlay bg-overlay">
-            <h2 class="card-title text-shadow text-white text-uppercase mb-0">Post Title</h2>
-            <h4 class="text-shadow text-white">March 1, 2017</h4>
-            <p class="lead card-text text-shadow text-white w-50 d-none d-lg-block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit repellat provident quo aliquam eius ea, animi porro magnam totam dolor nam error quas labore eveniet dicta nostrum inventore veniam. Ipsam?</p>
+            <h2 class="card-title text-shadow text-white text-uppercase mb-0">Study Space of the Month</h2>
+            <h4 class="text-shadow text-white"> 1 November, 2017</h4>
+            <p class="lead card-text text-shadow text-white w-50 d-none d-lg-block"> This place is filled with natural light, quirky furniture and peace and quiet. The study space of the month is the Wellcome Library. Having spoken to our fellow students we also discovered that not many know about it. So you are bound to find space to study in there (for now). Go ahead and give it a visit! The only minus: you need to bring a clear bag to fill with the contents that you'll need. Otherwise you can't bring anything else with you. </p>
             <a href="#" class="btn btn-secondary">Read More</a>
           </div>
         </div>
