--- a/about.html
+++ b/about.html
@@ -125,14 +125,18 @@
           <strong>Form</strong>
         </h2>
         <hr class="divider">
+        <div class="col-lg-6">
+            <p>Please fill in mandatory fields marked with a "*"</p>
+            
+          </div>
         <form>
           <div class="row">
             <div class="form-group col-lg-4">
-              <label class="text-heading">Name</label>
+              <label class="text-heading">Name*</label>
               <input type="text" class="form-control">
             </div>
             <div class="form-group col-lg-4">
-              <label class="text-heading">Email Address</label>
+              <label class="text-heading">Email Address*</label>
               <input type="email" class="form-control">
             </div>
             <div class="form-group col-lg-4">
@@ -154,7 +158,7 @@
 
     <footer class="bg-faded text-center py-5">
       <div class="container">
-        <p class="m-0">Copyright &copy; Your Website 2017</p>
+        <p class="m-0">Copyright &copy; Study Buddy 2017</p>
       </div>
     </footer>
 
