changes to index and contact

--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
           </div>
           <div class="col-lg-4">
             <h3></h3>
-            <input type="Postcode" placeholder="Postcode"> 
+            <input type="Postcode" placeholder="Postcode" class="form-control">
             <button type="submit" class="btn btn-secondary">Submit</button>
           </div>
         </div>
