--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
             <li class="nav-item px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="blog.html">Social</a>
             </li>
-            
           </ul>
         </div>
       </div>
@@ -126,6 +125,11 @@
           <strong>showcase your content</strong>
         </h2>
         <hr class="divider">
+      <form action="/action_page.php">
+          <input type="checkbox" name="preference" value="Bike"> Quiet<br>
+          <input type="checkbox" name="preference" value="Car" checked> I don't mind<br>
+          <input type="submit" value="Find">  
+      </form>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam soluta dolore voluptatem, deleniti dignissimos excepturi veritatis cum hic sunt perferendis ipsum perspiciatis nam officiis sequi atque enim ut! Velit, consectetur.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam pariatur perspiciatis reprehenderit illo et vitae iste provident debitis quos corporis saepe deserunt ad, officia, minima natus molestias assumenda nisi velit?</p>
       </div>
