tried to change checkbox css (failed) and tried to fix some of the stuff on the blog

--- a/blog.html
+++ b/blog.html
@@ -73,20 +73,21 @@
         <div class="card card-inverse">
           <img class="card-img img-fluid w-100" src="img/slide-2.jpg" alt="">
           <div class="card-img-overlay bg-overlay">
-            <h2 class="card-title text-shadow text-white text-uppercase mb-0">Tippy Tap</h2>
+            <h2 class="card-title text-shadow text-white text-uppercase mb-0">Tippy Tap - Study Space of the Month</h2>
             <h4 class="text-shadow text-white"> 1 December, 2017</h4>
             <p class="lead card-text text-shadow text-white w-50 d-none d-lg-block">Hey Guys! New space found! It's called Tap Coffee. How do you find it? Just follow the numbers on the door. Literally. Each coffeeshop has a different number, to signify the number of the store #genius. Some are bigger than others and therefore more spacious, some smaller but cozier.
             
-            What's good? 
-<!-- /.PUT A LIST -->
-                  Good coffee
-                  Pretty space
+            <h4> What's Good? </h4>
+           <ul></ul>
+                  <li>Good coffee</li>
+                  <li> Pretty space</li>
 
-           The minus? 
+           <h4> The minus? </h4>
 
-                  No plugs. 
+              <li> No plugs. </li>
 
-Overall rating?
+            <h4> Overall rating? 7/10 </h4>
+            
 <!-- /.PUT EMOJI -->
 
             </p>
@@ -99,9 +100,21 @@ Overall rating?
         <div class="card card-inverse">
           <img class="card-img img-fluid w-100" src="img/slide-3.jpg" alt="">
           <div class="card-img-overlay bg-overlay">
-            <h2 class="card-title text-shadow text-white text-uppercase mb-0">Study Space of the Month</h2>
+            <h2 class="card-title text-shadow text-white text-uppercase mb-0">Wellcome to our world - Study Space of the Month</h2>
             <h4 class="text-shadow text-white"> 1 November, 2017</h4>
-            <p class="lead card-text text-shadow text-white w-50 d-none d-lg-block"> This place is filled with natural light, quirky furniture and peace and quiet. The study space of the month is the Wellcome Library. Having spoken to our fellow students we also discovered that not many know about it. So you are bound to find space to study in there (for now). Go ahead and give it a visit! The only minus: you need to bring a clear bag to fill with the contents that you'll need. Otherwise you can't bring anything else with you. </p>
+            <p class="lead card-text text-shadow text-white w-50 d-none d-lg-block"> This place is filled with natural light and quirky furniture. The study space of the month is the Wellcome Library. Having spoken to our fellow students we also discovered that not many know about it. So you are bound to find space to study in there (for now). Go ahead and give it a visit! </p>
+
+            <h4> What's Good? </h4>
+              <ul></ul>
+                  <li> Lighting, Space, Quiet</li>
+
+           <h4> The minus? </h4>
+
+              <li> You need to bring a clear bag to fill with the contents that you'll need - otherwise you can't bring anything else with you:/ </li>
+
+            <h4> Overall rating? 8/10 </h4>
+
+
             <a href="#" class="btn btn-secondary">Read More</a>
           </div>
         </div>
