--- a/index.html
+++ b/index.html
@@ -125,11 +125,17 @@
           <strong>your fit</strong>
         </h2>
         <hr class="divider">
+        <h3> Your priorities? </h3>
       <form action="/action_page.php">
           <input type="checkbox" name="preference" value="Bike"> Quiet<br>
-          <input type="checkbox" name="preference" value="Car" checked> I don't mind<br>
           <input type="checkbox" name="preference" value="Bus" checked> Busy<br>
           <input type="checkbox" name="preference" value="Plane" checked> Food<br>
+          <input type="checkbox" name="preference" value="Bike"> Spacious <br>
+          <input type="checkbox" name="preference" value="Bike"> Plugs <br>
+          <input type="checkbox" name="preference" value="Bike"> Coffee <br>
+          <input type="checkbox" name="preference" value="Bike"> Quiet<br>
+          <input type="checkbox" name="preference" value="Car" checked> I don't mind<br>
+
           <input type="submit" value="Find">  
       </form>
          
