--- a/about.html
+++ b/about.html
@@ -121,8 +121,8 @@
 
       <div class="bg-faded p-4 my-4">
         <hr class="divider">
-        <h2 class="text-center text-lg text-uppercase my-0">Contact
-          <strong>Form</strong>
+        <h2 class="text-center text-lg text-uppercase my-0"> Tell us about 
+          <strong>your favourite study space!</strong>
         </h2>
         <hr class="divider">
         <div class="col-lg-6">
